--- a/package.json
+++ b/package.json
@@ -31,14 +31,22 @@
   },
   "homepage": "https://github.com/restmatic/server#readme",
   "devDependencies": {
+    "@types/express": "^4.16.1",
     "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.123",
+    "@types/morgan": "^1.7.35",
     "jest": "^24.5.0",
     "ts-jest": "^24.0.0",
     "typescript": "^3.3.4000"
   },
   "dependencies": {
-    "@pomegranate/plugin-tools": "^0.0.9",
-    "express": "^4.16.4"
+    "@pomegranate/plugin-tools": "^1.0.0",
+    "compression": "^1.7.4",
+    "express": "^4.16.4",
+    "lodash": "^4.17.11",
+    "lodash-fun": "^1.6.1",
+    "morgan": "^1.9.1",
+    "response-time": "^2.3.2",
+    "serve-static": "^1.13.2"
   }
 }
