--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/restmatic/server#readme",
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.1",
     "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.123",
@@ -41,6 +42,7 @@
   },
   "dependencies": {
     "@pomegranate/plugin-tools": "^1.2.2",
+    "body-parser": "^1.18.3",
     "compression": "^1.7.4",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
